k8s/data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-ingress
  namespace: data
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: data.local
      http:
        paths:
          - path: /pg-indetity
            pathType: Prefix
            backend:
              service:
                name: identity-db
                port:
                  number: 5433
          - path: /pg-workspace
            pathType: Prefix
            backend:
              service:
                name: workspace-db
                port:
                  number: 5434
          - path: /pg-project
            pathType: Prefix
            backend:
              service:
                name: project-db
                port:
                  number: 5435
